<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="Account">

        <EditTextPreference
            android:key="@string/pref_user_email"
            android:title="@string/pref_title_user_email" />

        <EditTextPreference
            android:key="@string/pref_user_code"
            android:title="@string/pref_title_user_code" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_performance_category">

        <ListPreference
            android:key="pref_accuracy"
            android:title="@string/accuracy"
            android:entries="@array/pref_accuracy_entries"
            android:entryValues="@array/pref_accuracy_values"
            android:defaultValue="@string/pref_accuracy_default_value"
            android:summary="%s"/>

        <ListPreference
            android:key="pref_send_location_data"
            android:title="@string/send_data_via"
            android:entries="@array/pref_location_data_entries"
            android:entryValues="@array/pref_location_data_values"
            android:defaultValue="@string/pref_location_data_default_value"
            android:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/autoopengts_server_category">

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:key="opengts_server"
            android:title="@string/autoopengts_server"
            android:inputType="textUri"
            android:summary="@string/autoopengts_server_summary"
            android:dialogTitle="@string/autoopengts_server"/>
        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:key="opengts_server_port"
            android:title="@string/autoftp_port"
            android:inputType="number"
            android:dialogTitle="@string/autoftp_port"/>
        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="opengts_server_communication_method"
            android:title="@string/opengts_server_communication_method"
            android:summary="@string/opengts_server_communication_method_summary"
            android:entries="@array/opengts_server_communication_methods_values"
            android:defaultValue="0"
            android:entryValues="@array/opengts_server_communication_methods_values"/>
        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:key="autoopengts_server_path"
            android:title="@string/autoopengts_server_path"
            android:inputType="textUri"
            android:summary="@string/autoopengts_server_path_summary"
            android:dialogTitle="@string/autoopengts_server_path"/>
        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:key="opengts_accountname"
            android:title="@string/autoopengts_accountname" />
        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:key="opengts_device_id"
            android:title="@string/autoopengts_device_id"
            android:dialogTitle="@string/autoopengts_device_id"/>
        <Preference
            android:key="opengts_validatecustomsslcert"
            android:title="@string/ssl_certificate_validate" />

    </PreferenceCategory>

</PreferenceScreen>