<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="listeners"
        android:summary="@string/listeners_summary"
        android:title="@string/listeners_title" />

    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
        android:key="session"
        android:title="Status Session"
        android:summary="0 status stop, 1 staus start"
        android:dialogTitle="@string/time_before_logging_dialog_title"
        android:numeric="integer"
        android:maxLength="1"
        android:hint="@string/time_before_logging_hint"
        android:enabled="false"
        android:defaultValue="0"/>

    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
        android:key="device_id"
        android:title="@string/device_id_title"
        android:summary="@string/device_id_summary"
        android:dialogTitle="@string/device_id_dialog_title"
        android:numeric="integer"
        android:maxLength="4"
        android:hint="@string/device_id_hint"
        android:enabled="false"
        android:defaultValue="0"/>

    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
        android:key="time_before_logging"
        android:title="@string/time_before_logging_title"
        android:summary="@string/time_before_logging_summary"
        android:dialogTitle="@string/time_before_logging_dialog_title"
        android:numeric="integer"
        android:maxLength="4"
        android:hint="@string/time_before_logging_hint"
        android:defaultValue="15"/>

</PreferenceScreen>