<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.afollestad.materialdialogs.prefs.MaterialListPreference
        android:entries="@array/preference_values"
        android:entryValues="@array/preference_values"
        android:key="unused_key01"
        android:persistent="true"
        android:summary="@string/list_pref_desc"
        android:title="@string/list_pref_title" />

    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
        android:defaultValue="@string/edittext_pref_optionalvalue"
        android:dialogMessage="@string/optional_dialog_message"
        android:dialogTitle="@string/edittext_pref_dialogtitle"
        android:inputType="textPersonName"
        android:key="unused_key03"
        android:persistent="true"
        android:summary="@string/edittext_pref_desc"
        android:title="@string/edittext_pref_title" />



</PreferenceScreen>